--- a/README
+++ b/README
@@ -124,10 +124,10 @@ Start using Bootstrap with Less http://twitter.github.com/bootstrap/
 Some expensive operations are scheduled instead of being done at the time of the requests.
 
 Right now all of those are delete operations:
-20 * * * * /home/web/plifk.com/distribution/production/application/services/program.php --action garbage.cleanfiles >> /dev/null 2>&1
-20 3 */2 * * /home/web/plifk.com/distribution/production/application/services/program.php --action garbage.cleanoldnewusers >> /dev/null 2>&1
-30 4 */3 * * /home/web/plifk.com/distribution/production/application/services/program.php --action garbage.cleanoldrecover >> /dev/null 2>&1
-40 5 */4 * * /home/web/plifk.com/distribution/production/application/services/program.php --action garbage.cleanoldemailchange >> /dev/null 2>&1
+20 * * * * /home/web/plifk.com/distribution/production/application/services/program.php --action cleanfiles --controller garbage >> /dev/null 2>&1
+20 3 */2 * * /home/web/plifk.com/distribution/production/application/services/program.php --action cleanoldnewusers --controller garbage >> /dev/null 2>&1
+30 4 */3 * * /home/web/plifk.com/distribution/production/application/services/program.php --action cleanoldrecover --controller garbage >> /dev/null 2>&1
+40 5 */4 * * /home/web/plifk.com/distribution/production/application/services/program.php --action cleanoldemailchange --controller garbage >> /dev/null 2>&1
 45 * * * * /home/plifk/production/application/services/sync.php >> /dev/null 2>&1
 
 
@@ -151,6 +151,8 @@ EXTERNAL_LIBRARY_PATH
 APPLICATION_ENV (development/production)
 DEFAULT_TIMEZONE (GMT)
 PLIFK_CONF_FILE (where the configuration file resides, which may might be other than the application/configs/applicaion.ini)
+APPLICATION_PATH
+CACHE_PATH
 
 They should be set on the Apache server with SetEnv and for the service module (CLI) it should be set as in
 http://www.mcsr.olemiss.edu/unixhelp/environment/env3db.html
