install php5-dev package if Travis
Signed-off-by: Henrique Vicente <henriquevicente@gmail.com>

--- a/bin/install
+++ b/bin/install
@@ -261,6 +261,9 @@ class Install {
             "geoip"
         );
         
+        //install php5-dev package
+        $this->execSimple("sudo apt-get install php5-dev");
+        
         //make sure we get updated channels
         $this->execSimple("sudo pecl channel-update pecl.php.net");
         
