fix unwanted CLI interaction
Signed-off-by: Henrique Vicente <henriquevicente@gmail.com>

--- a/bin/install
+++ b/bin/install
@@ -239,6 +239,7 @@ class Install {
         
         if (getenv("TRAVIS")) {
             fwrite(STDERR, $this->colors->getColoredString("Not installing any extension in Travis CI at this time."));
+            return false;
             //return $this->installExtensionsForTravis($diff);
         }
         
