remove unwanted CLI interaction for when it is Travis
Signed-off-by: Henrique Vicente <henriquevicente@gmail.com>

--- a/bin/install
+++ b/bin/install
@@ -191,7 +191,10 @@ class Install {
     public function copyConfig($file) {
         if (! file_exists($file)) {
             $q = "yes";
-            $this->setValue("Copy the configuration model to the choosen application config path?", $q);
+            
+            if (! getenv("TRAVIS")) {
+                $this->setValue("Copy the configuration model to the choosen application config path?", $q);
+            }
             
             if ($q != "yes") {
                 return false;
