--- a/bin/install
+++ b/bin/install
@@ -241,7 +241,7 @@ class Install {
         }
         
         if (getenv("TRAVIS")) {
-            fwrite(STDERR, $this->colors->getColoredString("Not installing any extension in Travis CI at this time."));
+            fwrite(STDERR, $this->colors->getColoredString("Not installing any extension in Travis CI at this time.\n"));
             return false;
             //return $this->installExtensionsForTravis($diff);
         }
